Working but incorrect/inaccurate stress

--- a/misc/Investigating stress with new periodic_general.ipynb
+++ b/misc/Investigating stress with new periodic_general.ipynb
@@ -33,25 +33,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cell:\t\t Cell([27.615, 27.615, 27.615])\n",
-      "max_box_length:\t 27.615\n",
-      "ro:\t\t 12.42675\n",
-      "rc:\t\t 13.8075\n",
+      "Cell:\t\t Cell([26.299999999999997, 26.299999999999997, 26.299999999999997])\n",
+      "max_box_length:\t 26.299999999999997\n",
+      "ro:\t\t 11.834999999999999\n",
+      "rc:\t\t 13.149999999999999\n",
       "\n",
       "R_real:\n",
-      " [[ 0.      0.      0.    ]\n",
-      " [ 0.      2.7615  2.7615]\n",
-      " [ 2.7615  0.      2.7615]\n",
+      " [[ 0.    0.    0.  ]\n",
+      " [ 0.    2.63  2.63]\n",
+      " [ 2.63  0.    2.63]\n",
       " ...\n",
-      " [22.092  24.8535 24.8535]\n",
-      " [24.8535 22.092  24.8535]\n",
-      " [24.8535 24.8535 22.092 ]]\n"
+      " [21.04 23.67 23.67]\n",
+      " [23.67 21.04 23.67]\n",
+      " [23.67 23.67 21.04]]\n"
      ]
     }
    ],
    "source": [
     "atoms = bulk('Ar', cubic=True) * [5, 5, 5]\n",
-    "atoms.set_cell(1.05 * atoms.get_cell(), scale_atoms=True)\n",
+    "# atoms.set_cell(1.05 * atoms.get_cell(), scale_atoms=True)\n",
     "\n",
     "R_real = atoms.get_positions()\n",
     "max_box_length = np.max([np.linalg.norm(uv) for uv in atoms.get_cell().array])\n",
@@ -66,12 +66,14 @@
     "print(\"ro:\\t\\t\", ro)\n",
     "print(\"rc:\\t\\t\", rc)\n",
     "print()\n",
-    "print(\"R_real:\\n\", R_real )"
+    "print(\"R_real:\\n\", R_real )\n",
+    "\n",
+    "atoms.calc = LennardJones(sigma=sigma, epsilon=epsilon, rc=rc, ro=ro, smooth=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "practical-drilling",
+   "id": "systematic-cement",
    "metadata": {},
    "source": [
     "## New `periodic_general()` with stress"
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "conventional-clearing",
    "metadata": {},
    "outputs": [],
@@ -106,37 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "refined-bryan",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mapping real to scaled coordinates\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "displacement_fn = new_get_displacement(atoms)\n",
-    "energy_fn = energy.lennard_jones_pair(displacement_fn, sigma=sigma, epsilon=epsilon, r_onset=ro/sigma, r_cutoff=rc/sigma)"
+    "energy_fn = energy.lennard_jones_pair(displacement_fn, sigma=sigma, epsilon=epsilon, r_onset=ro/sigma, r_cutoff=rc/sigma)\n",
+    "force_fn = quantity.force(energy_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "considered-worship",
+   "execution_count": 5,
+   "id": "municipal-finland",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mapping real to scaled coordinates\n",
-      "-380.8736576477754\n",
-      "mapping real to scaled coordinates\n",
-      "97759717.42890728\n"
+      "-507.70818181837706\n",
+      "-507.708181818377\n",
+      "176288289.11375165\n"
      ]
     }
    ],
@@ -146,31 +140,33 @@
     "\n",
     "# correct: shrinking the box should increase the energy\n",
     "print(energy_fn(R_real, box=box))\n",
+    "print(atoms.get_potential_energy())\n",
+    "\n",
     "print(energy_fn(R_real, box=box/4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "arranged-portsmouth",
+   "execution_count": 41,
+   "id": "czech-likelihood",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mapping real to scaled coordinates\n",
-      "-380.87365764777536\n",
-      "mapping real to scaled coordinates\n",
-      "[[ 1.29529915e-03  1.03998362e-21  9.83046596e-23]\n",
-      " [ 4.63359039e-22  1.29529915e-03 -1.36336787e-21]\n",
-      " [ 7.85298791e-22 -7.79985964e-22  1.29529915e-03]]\n"
+      "-507.70818181837694\n",
+      "[[ 2.08734099e-03 -3.39717472e-21 -3.38783604e-21]\n",
+      " [-1.77606678e-21  2.08734099e-03  7.87671640e-22]\n",
+      " [-3.79236803e-21  7.15779675e-22  2.08734099e-03]]\n"
      ]
     }
    ],
    "source": [
     "# computing stress\n",
     "deformation_energy_fn = lambda deformation, R: energy_fn(R, box=box+deformation)\n",
+    "deformation_force_fn = lambda deformation, R: grad(deformation_energy_fn, argnums=1)(deformation, R) * -1\n",
+    "stress_fn = lambda deformation, R: grad(deformation_energy_fn, argnums=0)(deformation, R) / jnp.linalg.det(box)\n",
     "\n",
     "deformation = jnp.zeros_like(box)\n",
     "\n",
@@ -178,9 +174,40 @@
     "print(deformation_energy_fn(deformation, R_real))\n",
     "\n",
     "# correct: 3x3 tensor, non-zero\n",
-    "stress = grad(deformation_energy_fn, argnums=0)(deformation, R_real) / jnp.linalg.det(box)\n",
+    "stress = stress_fn(deformation, R_real)\n",
     "print(stress)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "british-modern",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# comparing to ASE output\n",
+    "def all_close(arr1, arr2, rtol=1e-7, atol=1e-15):\n",
+    "    np.testing.assert_allclose(arr1, arr2, rtol=rtol, atol=atol, equal_nan=True)\n",
+    "    \n",
+    "# energy - with and without deformation\n",
+    "all_close(atoms.get_potential_energy(), energy_fn(R_real))\n",
+    "all_close(atoms.get_potential_energy(), deformation_energy_fn(deformation, R_real))\n",
+    "\n",
+    "# forces - with and without deformation\n",
+    "all_close(atoms.get_forces(), force_fn(R_real), atol=1e-14)\n",
+    "all_close(atoms.get_forces(), deformation_force_fn(deformation, R_real), atol=1e-14)\n",
+    "\n",
+    "# stress. atol=1e-1 !!\n",
+    "all_close(atoms.get_stress(voigt=False), stress_fn(deformation, R_real), atol=1e-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adapted-basket",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
