Correct and symmetric stress computation

--- a/misc/Investigating stress with new periodic_general.ipynb
+++ b/misc/Investigating stress with new periodic_general.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "following-transportation",
    "metadata": {},
    "outputs": [],
@@ -16,14 +16,12 @@
     "from ase.calculators.lj import LennardJones\n",
     "from jax_md import space, energy, quantity\n",
     "from jax.config import config\n",
-    "config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "import asax.utils"
+    "config.update(\"jax_enable_x64\", True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "reflected-symbol",
    "metadata": {
     "scrolled": false
@@ -51,7 +49,6 @@
    ],
    "source": [
     "atoms = bulk('Ar', cubic=True) * [5, 5, 5]\n",
-    "# atoms.set_cell(1.05 * atoms.get_cell(), scale_atoms=True)\n",
     "\n",
     "R_real = atoms.get_positions()\n",
     "max_box_length = np.max([np.linalg.norm(uv) for uv in atoms.get_cell().array])\n",
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "conventional-clearing",
    "metadata": {},
    "outputs": [],
@@ -108,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "refined-bryan",
    "metadata": {},
    "outputs": [],
@@ -120,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "municipal-finland",
    "metadata": {},
    "outputs": [
@@ -129,8 +126,7 @@
      "output_type": "stream",
      "text": [
       "-507.70818181837706\n",
-      "-507.708181818377\n",
-      "176288289.11375165\n"
+      "176288289.1137517\n"
      ]
     }
    ],
@@ -140,14 +136,12 @@
     "\n",
     "# correct: shrinking the box should increase the energy\n",
     "print(energy_fn(R_real, box=box))\n",
-    "print(atoms.get_potential_energy())\n",
-    "\n",
     "print(energy_fn(R_real, box=box/4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "czech-likelihood",
    "metadata": {},
    "outputs": [
@@ -156,15 +150,15 @@
      "output_type": "stream",
      "text": [
       "-507.70818181837694\n",
-      "[[ 2.08734099e-03 -3.39717472e-21 -3.38783604e-21]\n",
-      " [-1.77606678e-21  2.08734099e-03  7.87671640e-22]\n",
-      " [-3.79236803e-21  7.15779675e-22  2.08734099e-03]]\n"
+      "[[ 5.48970680e-02 -6.80281257e-20 -9.44196834e-20]\n",
+      " [-6.80281257e-20  5.48970680e-02  1.97703848e-20]\n",
+      " [-9.44196834e-20  1.97703848e-20  5.48970680e-02]]\n"
      ]
     }
    ],
    "source": [
     "# computing stress\n",
-    "deformation_energy_fn = lambda deformation, R: energy_fn(R, box=box+deformation)\n",
+    "deformation_energy_fn = lambda deformation, R: energy_fn(R, box=jnp.dot(jnp.eye(3) + (deformation + deformation.T)*0.5, box))\n",
     "deformation_force_fn = lambda deformation, R: grad(deformation_energy_fn, argnums=1)(deformation, R) * -1\n",
     "stress_fn = lambda deformation, R: grad(deformation_energy_fn, argnums=0)(deformation, R) / jnp.linalg.det(box)\n",
     "\n",
@@ -175,15 +169,32 @@
     "\n",
     "# correct: 3x3 tensor, non-zero\n",
     "stress = stress_fn(deformation, R_real)\n",
-    "print(stress)"
+    "print(stress)\n",
+    "\n",
+    "# jnp.dot(jnp.eye(3) + deformation, box)\n",
+    "\n",
+    "# new_transform(box, jnp.eye(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "id": "british-modern",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5.48970680e-02  1.51030213e-19 -7.77628090e-20]\n",
+      " [ 1.51030213e-19  5.48970680e-02  2.11587379e-19]\n",
+      " [-7.77628090e-20  2.11587379e-19  5.48970680e-02]]\n",
+      "[[ 5.48970680e-02 -6.80281257e-20 -9.44196834e-20]\n",
+      " [-6.80281257e-20  5.48970680e-02  1.97703848e-20]\n",
+      " [-9.44196834e-20  1.97703848e-20  5.48970680e-02]]\n"
+     ]
+    }
+   ],
    "source": [
     "# comparing to ASE output\n",
     "def all_close(arr1, arr2, rtol=1e-7, atol=1e-15):\n",
@@ -197,8 +208,16 @@
     "all_close(atoms.get_forces(), force_fn(R_real), atol=1e-14)\n",
     "all_close(atoms.get_forces(), deformation_force_fn(deformation, R_real), atol=1e-14)\n",
     "\n",
-    "# stress. atol=1e-1 !!\n",
-    "all_close(atoms.get_stress(voigt=False), stress_fn(deformation, R_real), atol=1e-1)"
+    "# stress\n",
+    "# TODO: Test with double64 precision\n",
+    "all_close(atoms.get_stress(voigt=False), stress_fn(deformation, R_real), atol=1e-17)\n",
+    "\n",
+    "print(atoms.get_stress(voigt=False))\n",
+    "\n",
+    "# interesting: JAX-MD stress is not exactly symmetric!\n",
+    "print(stress_fn(deformation, R_real))\n",
+    "\n",
+    "# TODO: stresses"
    ]
   },
   {
