Passing: Comparison Test w/o stress

--- a/misc/investigating wrong forces.ipynb
+++ b/misc/investigating wrong forces.ipynb
@@ -106,6 +106,8 @@
     "np.testing.assert_allclose(ase_epot, jaxmd_epot, rtol=1e-7, atol=1e-15, equal_nan=True)\n",
     "np.testing.assert_allclose(ase_forces, jaxmd_forces, rtol=1e-7, atol=1e-14, equal_nan=True)\n",
     "\n",
+    "# TODO: check force\n",
+    "\n",
     "print(\"ASE e_pot:\\t\", ase_epot)\n",
     "print(\"JAX-MD e_pot:\\t\", jaxmd_epot)"
    ]
