plot_runtimes() keeps track of different runs. ugly but working.

--- a/misc/Computing stress with new periodic_general.ipynb
+++ b/misc/Computing stress with new periodic_general.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "id": "conventional-clearing",
    "metadata": {},
    "outputs": [],
@@ -127,11 +127,11 @@
     "        Rb_scaled = new_transform(inverse_cell, Rb)\n",
     "        return displacement_in_scaled_coordinates(Ra_scaled, Rb_scaled, **kwargs)\n",
     "    \n",
-    "    @jit\n",
-    "    def shift(R: space.Array, dR: space.Array, **kwargs) -> space.Array:\n",
-    "        R_scaled = new_transform(inverse_cell, R)\n",
-    "        # dR is an output of displacement and should be already in real coordinates\n",
-    "        return shfit_in_scaled_coordinates(R_scaled, dR, **kwargs)\n",
+    "    #@jit\n",
+    "    #def shift(R: space.Array, dR: space.Array, **kwargs) -> space.Array:\n",
+    "    #    R_scaled = new_transform(inverse_cell, R)\n",
+    "    #    # dR is an output of displacement and should be already in real coordinates\n",
+    "    #    return shfit_in_scaled_coordinates(R_scaled, dR, **kwargs)\n",
     "\n",
     "    return displacement, shift"
    ]
