fixes for runtime benchmark

--- a/benchmarks/oom_analysis/OOM analysis.ipynb
+++ b/benchmarks/oom_analysis/OOM analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "danish-desktop",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "hollywood-philip",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,8 @@
     "# TODO: Fix short descriptions to include \"Lennard-Jones\" (distinguish from GNN)\n",
     "# GNN: Include Neighbor List?\n",
     "# remove duplicates but keep correct ordering of appearance\n",
-    "labels = sorted(set([c.short_description for c in calculators]), key=labels.index)\n",
+    "labels = [c.short_description for c in calculators]\n",
+    "labels = sorted(set(labels), key=labels.index)\n",
     "\n",
     "all_properties = list(map(lambda c: c.n, filter(lambda c: c._stress and c._stresses, calculators)))\n",
     "only_stress = list(map(lambda c: c.n, filter(lambda c: c._stress and not c._stresses, calculators)))\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "headed-cherry",
    "metadata": {
     "scrolled": true
