runtime results polished

--- a/benchmarks/oom_analysis/OOM analysis.ipynb
+++ b/benchmarks/oom_analysis/OOM analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "danish-desktop",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,8 @@
       "JAX-MD Neighbor List (stress=True, stresses=False, jit=True)           went OOM at n=15360\n",
       "JAX-MD Neighbor List (stress=False, stresses=True, jit=True)           went OOM at n=15360\n",
       "JAX-MD Neighbor List (stress=False, stresses=False, jit=True)          went OOM at n=15360\n",
-      "JAX-MD Neighbor List (stress=False, stresses=False, jit=False)         went OOM at n=15360\n"
+      "JAX-MD Neighbor List (stress=False, stresses=False, jit=False)         went OOM at n=15360\n",
+      "[108, 240, 320, 400, 500, 720, 864, 1008, 1176, 1372, 1568, 1792, 2048, 2304, 2592, 2916, 3600, 4000, 4840, 5324, 6336, 6912, 8112, 8788, 10192, 10976, 12600, 13500, 15360, 16384, 19652, 23328]\n"
      ]
     }
    ],
@@ -45,7 +46,9 @@
     "system_sizes = system_sizes[:idx_max_n + 1]\n",
     "\n",
     "for c in calculators:\n",
-    "    print(\"{:<70} went OOM at n={}\".format(c.description, c.n))    "
+    "    print(\"{:<70} went OOM at n={}\".format(c.description, c.n))    \n",
+    "    \n",
+    "print([len(sc) for sc in super_cells])"
    ]
   },
   {
