update to new jax-md version w/ new periodic_general

--- a/benchmarks/runtime_analysis/Result visualizations - oom.ipynb
+++ b/benchmarks/runtime_analysis/Result visualizations - oom.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "mathematical-premiere",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'pickles/ase/ase_nl_runtime.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-084775bfa979>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# oom_events: List[Tuple[Callable, Calculator, str]] = load_oom_events_from_pickle(\"oom_events.pickle\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_results_from_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pickles/ase/ase_nl_runtime.pickle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mjaxmd_pair\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_results_from_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pickles/jaxmd-pair/jaxmd_pair_runtime.pickle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mjaxmd_nl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_results_from_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pickles/jaxmd-nl/jaxmd_nl_runtime.pickle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/git/gknet-benchmarks/utils.py\u001b[0m in \u001b[0;36mload_results_from_pickle\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_results_from_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mResult\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pickles/ase/ase_nl_runtime.pickle'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "if not '/home/pop518504/git/gknet-benchmarks' in sys.path:\n",
@@ -20,7 +33,7 @@
     "# results = load_results_from_pickle(\"results/100_runs/results_100_runs.pickle\")\n",
     "# oom_events: List[Tuple[Callable, Calculator, str]] = load_oom_events_from_pickle(\"oom_events.pickle\")\n",
     "\n",
-    "ase = load_results_from_pickle(\"pickles/ase/ase_nl.pickle\")\n",
+    "ase = load_results_from_pickle(\"pickles/ase/ase_nl_runtime.pickle\")\n",
     "jaxmd_pair = load_results_from_pickle(\"pickles/jaxmd-pair/jaxmd_pair_runtime.pickle\")\n",
     "jaxmd_nl = load_results_from_pickle(\"pickles/jaxmd-nl/jaxmd_nl_runtime.pickle\")\n",
     "jaxmd_gnn = load_results_from_pickle(\"pickles/jaxmd-gnn/jaxmd_gnn_runtime.pickle\")\n",
@@ -30,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "about-walter",
    "metadata": {},
    "outputs": [
@@ -41,7 +54,7 @@
        "<Figure size 1800x720 with 1 Axes>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
