--- a/misc/LJ 64k atoms.ipynb
+++ b/misc/LJ 64k atoms.ipynb
@@ -20,6 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "pediatric-council",
+   "metadata": {},
+   "source": [
+    "## Initialization logic\n",
+    "Taken from original LJ benchmark notebook at `jax-md/notebooks/lj_benchmark.ipynb`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "unusual-answer",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-lender",
+   "id": "demographic-empire",
    "metadata": {},
    "source": [
     "## Benchmark scenario from `jax-md/notebooks/lj_benchmark.ipynb`\n",
@@ -191,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "answering-correspondence",
+   "id": "correct-zambia",
    "metadata": {},
    "outputs": [],
    "source": []
