Cell results added

--- a/MWEs/Force function much slower than gradient function.ipynb
+++ b/MWEs/Force function much slower than gradient function.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "cellView": "form",
     "id": "xrLuRZXldWp3"
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "id": "4H9tmFyAdjHN"
    },
    "outputs": [],
    "source": [
     "lattice_constant = 1.37820\n",
-    "N_rep = 20\n",
+    "N_rep = 40\n",
     "box_size = N_rep * lattice_constant\n",
     "# Using float32 for positions / velocities, but float64 for reductions.\n",
     "dtype = jnp.float32\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "id": "eXyYhfFId3WA"
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created a system of 8000 LJ particles with number density 0.382\n"
+      "Created a system of 64000 LJ particles with number density 0.382\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,9 @@
     "    new_state, new_nbrs = lax.fori_loop(0, 10000, step, (state, nbrs))\n",
     "    new_state.position.block_until_ready()\n",
     "\n",
-    "    print(\"Elapsed: {} seconds\".format(time.monotonic() - start))"
+    "    elapsed = round(time.monotonic() - start, 2)\n",
+    "    print(\"{} seconds elapsed\".format(elapsed))\n",
+    "    print(\"{} ms/step\".format(round(elapsed / 10, 2)))"
    ]
   },
   {
@@ -148,11 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "n2oXs5uIeBNo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.72 seconds elapsed\n",
+      "7.97 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "neighbor_fn, energy_fn = energy.lennard_jones_neighbor_list(displacement,\n",
     "                                                            box_size, \n",
@@ -173,9 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.98 seconds elapsed\n",
+      "8.0 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_1 = quantity.force(energy_fn)\n",
     "run_nve(neighbor_fn, force_fn_1)"
@@ -183,9 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.84 seconds elapsed\n",
+      "7.98 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_2 = lambda R, **kwargs: -1.0 * grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, force_fn_2)"
@@ -193,9 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.89 seconds elapsed\n",
+      "7.99 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_3 = lambda R, **kwargs: np.float32(-1.0) * grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, force_fn_3)"
@@ -203,9 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.88 seconds elapsed\n",
+      "7.99 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_4 = lambda R, **kwargs: jnp.float32(-1.0) * grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, force_fn_4)"
@@ -213,9 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.97 seconds elapsed\n",
+      "8.0 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_5 = lambda R, **kwargs: util.maybe_downcast(-1.0) * grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, force_fn_5)"
@@ -223,9 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.94 seconds elapsed\n",
+      "7.99 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "force_fn_6 = lambda R, **kwargs: np.short(-1) * grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, force_fn_6)"
@@ -251,19 +316,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49.27 seconds elapsed\n",
+      "4.93 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "grad_fn_1 = grad(energy_fn)\n",
-    "run_nve(neighbor_fn, grad_fn_2)"
+    "run_nve(neighbor_fn, grad_fn_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49.2 seconds elapsed\n",
+      "4.92 ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "grad_fn_2 = lambda R, **kwargs: grad(energy_fn)(R, **kwargs)\n",
     "run_nve(neighbor_fn, grad_fn_2)"
@@ -288,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +380,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "178 ms ± 14.1 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "%timeit force_fn_1(R, neighbor=nbrs)"
+    "%timeit -n 100 force_fn_1(R, neighbor=nbrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182 ms ± 6.19 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit -n 100 grad_fn_1(R, neighbor=nbrs)"
    ]
   },
   {
@@ -311,9 +419,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%timeit grad_fn_1(R, neighbor=nbrs)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
