--- a/MWEs/Influence of batch_size on NVE performance.ipynb
+++ b/MWEs/Influence of batch_size on NVE performance.ipynb
@@ -94,6 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Initialized cubic Argon, n = 4000\n",
       "Initialized cubic Argon, n = 4000\n"
      ]
     }
@@ -178,7 +179,7 @@
    "source": [
     "def run_nve(atoms: Atoms, steps: int, batch_size: int):\n",
     "\n",
-    "    @jit\n",
+    "    #@jit\n",
     "    def step_fn(i, state):\n",
     "        state, neighbors = state\n",
     "        neighbors = neighbor_fn(state.position, neighbors)\n",
@@ -220,6 +221,8 @@
     "            neighbors = neighbor_fn(state.position)\n",
     "            print(\"Steps {}/{}: Neighbor list overflow, recomputing...\".format(i, steps))\n",
     "            continue\n",
+    "            \n",
+    "        state.position.block_until_ready()    \n",
     "\n",
     "        batch_times += [get_milliseconds(batch_start_time)]\n",
     "        i += batch_size\n",
@@ -520,6 +523,134 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "worldwide-textbook",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "standard-director",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "integral-overall",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "binary-transsexual",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_nve(atoms: Atoms, steps: int, batch_size: int):\n",
+    "\n",
+    "    @jit\n",
+    "    def step_fn(i, state):\n",
+    "        state, neighbors = state\n",
+    "        neighbors = neighbor_fn(state.position, neighbors)\n",
+    "        state = apply_fn(state, neighbor=neighbors)\n",
+    "        return state, neighbors\n",
+    "\n",
+    "    batch_times = []\n",
+    "\n",
+    "    # setup displacement\n",
+    "    box = atoms.get_cell().array\n",
+    "    displacement_fn, shift_fn = space.periodic_general(box, fractional_coordinates=False)\n",
+    "\n",
+    "    # normalize LJ parameters and setup NL energy function\n",
+    "    normalized_ro = ro / sigma\n",
+    "    normalized_rc = rc / sigma\n",
+    "    neighbor_fn, energy_fn = energy.lennard_jones_neighbor_list(displacement_fn, box,\n",
+    "                                                                sigma=sigma,\n",
+    "                                                                epsilon=epsilon,\n",
+    "                                                                r_onset=normalized_ro,\n",
+    "                                                                r_cutoff=normalized_rc,\n",
+    "                                                                dr_threshold=1 * units.Angstrom)\n",
+    "    energy_fn = jit(energy_fn)\n",
+    "\n",
+    "    # compute initial neighbor list\n",
+    "    R = atoms.get_positions(wrap=True)\n",
+    "    neighbors = neighbor_fn(R, extra_capacity=100)\n",
+    "\n",
+    "    # compute initial state & setup NVE\n",
+    "    state = get_initial_nve_state(atoms)\n",
+    "    _, apply_fn = simulate.nve(energy_fn, shift_fn, dt=dt)\n",
+    "\n",
+    "    # run MD loop\n",
+    "    i = 0\n",
+    "    while i < steps:\n",
+    "        batch_start_time = time.monotonic()\n",
+    "        state, neighbors = lax.fori_loop(0, batch_size, step_fn, (state, neighbors))\n",
+    "        \n",
+    "        #if neighbors.did_buffer_overflow:\n",
+    "        #    neighbors = neighbor_fn(state.position)\n",
+    "        #    print(\"Steps {}/{}: Neighbor list overflow, recomputing...\".format(i, steps))\n",
+    "        #    continue\n",
+    "        \n",
+    "        state.position.block_until_ready()\n",
+    "        batch_times += [get_milliseconds(batch_start_time)]\n",
+    "        i += batch_size\n",
+    "\n",
+    "    return get_mean_step_time(batch_times, batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "altered-photograph",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 4000  \t\t batch_size = 100  \t\t average ms/step = 33.4\n",
+      "n = 4000  \t\t batch_size = 100  \t\t average ms/step = 33.4\n",
+      "n = 4000  \t\t batch_size = 200  \t\t average ms/step = 33.31\n",
+      "n = 4000  \t\t batch_size = 200  \t\t average ms/step = 33.31\n",
+      "n = 4000  \t\t batch_size = 300  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 300  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 400  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 400  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 500  \t\t average ms/step = 33.35\n",
+      "n = 4000  \t\t batch_size = 500  \t\t average ms/step = 33.35\n",
+      "n = 4000  \t\t batch_size = 600  \t\t average ms/step = 33.34\n",
+      "n = 4000  \t\t batch_size = 600  \t\t average ms/step = 33.34\n",
+      "n = 4000  \t\t batch_size = 700  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 700  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 800  \t\t average ms/step = 33.32\n",
+      "n = 4000  \t\t batch_size = 800  \t\t average ms/step = 33.32\n",
+      "n = 4000  \t\t batch_size = 900  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 900  \t\t average ms/step = 33.33\n",
+      "n = 4000  \t\t batch_size = 1000 \t\t average ms/step = 33.35\n",
+      "n = 4000  \t\t batch_size = 1000 \t\t average ms/step = 33.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_sizes = list(range(100, 1100, 100))\n",
+    "step_times = []\n",
+    "\n",
+    "for bs in batch_sizes:\n",
+    "    atoms = initialize_cubic_argon(multiplier=10)\n",
+    "\n",
+    "    mean_step_time = run_nve(atoms, steps=5000, batch_size=bs)\n",
+    "    step_times += [mean_step_time]\n",
+    "    print(\"n = {:<5} \\t\\t batch_size = {:<4} \\t\\t average ms/step = {}\".format(len(atoms), bs, mean_step_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unavailable-lodging",
    "metadata": {},
    "outputs": [],
    "source": []
