--- a/MWEs/Neighbor list issues.ipynb
+++ b/MWEs/Neighbor list issues.ipynb
@@ -280,9 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 864\n",
+      "NL overflow = False\n"
+     ]
+    }
+   ],
    "source": [
     "atoms = create_cubic_argon(multiplier=6)\n",
     "state = get_initial_nve_state(atoms)\n",
